<resources>
    <string name="app_name">Quick Survey</string>
    <string name="navigation_drawer_open">Open Navigation Drawer</string>
    <string name="navigation_drawer_close">Close Navigation Drawer</string>
    <string name="individual">Individual</string>
    <string name="group">Group</string>
    <string name="organization">Organization</string>
    <string name="department">Department</string>
    <string name="live">Live</string>
    <string name="past_surveys">Past Surveys</string>
    <string name="next_attempt_survey">Next</string>
    <string name="survey_name">Survey Name</string>
    <string name="deadline">Deadline</string>
    <string name="to">To</string>
    <string name="organization_sbt_to">Organization</string>
    <string name="department_sbt_to">Department</string>
    <string name="individual_sbt_to">Individual</string>
    <string name="department_id">Department ID</string>
    <string name="group_sbt_to">Group</string>
    <string name="group_id">Group ID</string>
    <string name="user_id">User ID</string>
    <string name="submit_successfully">Submit Successfully</string>
    <string name="profile_name">Profile Name</string>
    <string name="change_password">Change Password</string>
    <string name="enter_new_password">Enter New Password</string>
    <string name="update">Update</string>
    <string name="yes_not2">Yes</string>
    <string name="no_not2">No</string>
    <string name="live_mysurveys">Live</string>
    <string name="past_surveys_mysurveys">Past Surveys</string>
    <string name="indiviudal_dashboard">Indiviudal</string>
    <string name="group_dashboard">Group</string>
    <string name="option_d">Option D</string>
    <string name="option_c">Option C</string>
    <string name="option_b">Option B</string>
    <string name="enter_question">Enter Question</string>
    <string name="add_another_question">Add another question</string>
    <string name="yyyy_mm_dd_hh_mm_ss">YYYY/MM/DD HH:MM:SS</string>
</resources>
