<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".submitTo"
    android:background="@drawable/main_header_selector">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/background_transparent"
        android:elevation="4dp"
        android:minHeight="?attr/actionBarSize"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        app:popupTheme="@style/Theme.AppCompat.Light" />

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:hint="@string/survey_name">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/surveyname"
            android:layout_width="match_parent"

            android:layout_height="50dp"

            android:clickable="false"
            android:ems="10"
            android:background="@drawable/rounded_edges2"


            android:inputType="textPersonName" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:hint="@string/deadline"
        app:startIconDrawable="@drawable/ic_timer_black_24dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/deadline"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@drawable/rounded_edges2"


            android:ems="10"
            android:inputType="datetime" />
    </com.google.android.material.textfield.TextInputLayout>


    <TextView
        android:id="@+id/textView15"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="23dp"
        android:layout_marginLeft="23dp"
        android:layout_marginTop="20dp"
        android:text="@string/to"
        android:textColor="#FFEB3B"
        android:textSize="18sp" />

    <RadioGroup
        android:id="@+id/rdgrp1"
        android:layout_width="365dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"

        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/org"
            android:layout_width="186dp"
            android:layout_height="wrap_content"
            android:text="@string/organization_sbt_to"
            android:buttonTint="#FFFFFF"
            android:textColor="#FFFFFF" />

        <RadioButton
            android:id="@+id/dep"
            android:layout_width="186dp"
            android:layout_height="wrap_content"
            android:buttonTint="#FFFFFF"
            android:textColor="#FFFFFF"
            android:text="@string/department_sbt_to" />

    </RadioGroup>

    <RadioGroup
        android:id="@+id/rdgrp2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"

        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/grp"
            android:buttonTint="#FFFFFF"
            android:textColor="#FFFFFF"
            android:layout_width="186dp"
            android:layout_height="wrap_content"
            android:text="@string/group_sbt_to" />

        <RadioButton
            android:id="@+id/indiv"
            android:buttonTint="#FFFFFF"
            android:textColor="#FFFFFF"
            android:layout_width="186dp"
            android:layout_height="wrap_content"
            android:text="@string/individual_sbt_to" />
    </RadioGroup>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="10dp"
        android:background="@drawable/rounded_edges2"
        android:hint="@string/department_id">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/depname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:background="#F7F7F7"
            android:clickable="false"
            android:inputType="textPersonName" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="10dp"
        android:background="@drawable/rounded_edges2"
        android:hint="@string/group_id">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/grpno"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#F7F7F7"
            android:clickable="false"
            android:editable="false"
            android:ems="10"
            android:inputType="textPersonName" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="10dp"
        android:background="@drawable/rounded_edges2"
        android:hint="@string/user_id">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/user_id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#F7F7F7"
            android:clickable="false"
            android:ems="10"
            android:inputType="textPersonName" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/finsbmt"
        android:layout_width="348dp"
        android:layout_height="60dp"
        android:layout_gravity="bottom|center_horizontal"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="18dp"
        android:background="@drawable/button2"
        android:onClick="goToHome"
        android:text="@string/submit_successfully"
        android:textAllCaps="false"
        android:textColor="#FFFFFF"
        android:textSize="18sp" />

</LinearLayout>